src/objects/LeanData__Scheduled_Run_History__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Apex_Job__c</fullName>
        <externalId>true</externalId>
        <label>Apex Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Deployment_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Id</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Deployment Ids</relationshipLabel>
        <relationshipName>Deployment_Ids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Failed_Records__c</fullName>
        <label>Failed Records</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Job_Status__c</fullName>
        <label>Job Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with errors</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Num_Processed__c</fullName>
        <label>Num Processed</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Num_Records__c</fullName>
        <label>Num Records</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Run_End__c</fullName>
        <label>Run End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Scheduled_Routing_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled_Routing_Job__c</label>
        <referenceTo>LeanData__Scheduled_Routing_Job__c</referenceTo>
        <relationshipLabel>Scheduled Routing Jobs</relationshipLabel>
        <relationshipName>Scheduled_Routing_Job</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Snapshot_Details__c</fullName>
        <label>Snapshot Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scheduled Run History</label>
    <nameField>
        <label>Scheduled_Run_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Run Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>